<resources>
    <string name="app_name">CaKeuApps</string>
    <string name="cakeu_apps">Cakeu Apps</string>
    <string name="name">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register Here!!</string>
    <string name="or_login_with">or login with :</string>
    <string name="powered_by">Powered by: [NGOPI] Software Development</string>
    <string name="username">username</string>
    <string name="register">REGISTER</string>
    <string name="password_again">input your password again</string>
    <string name="email">email</string>
    <string name="nominal">nominal</string>
    <string name="input_your_first_money">input your first money</string>
    <string name="add_friends">Create Groups</string>
    <string name="scan_qr">Scan QR</string>
    <string name="flow_history">Cash History</string>
    <string name="cash_flow">Cash Flow</string>
    <string name="cash_control">Cash Control</string>

    <string-array name="selectType">
        <item>save money</item>
        <item>spend money</item>
    </string-array>

    <!--  for ads  -->
<!--    <string name="adsId" translatable="false">ca-app-pub-5695049111307874~5803816241</string>-->
    <string name="adsId" translatable="false">ca-app-pub-1054022283683770~1124015184</string>
<!--    <string name="adsUnit" translatable="false">ca-app-pub-5695049111307874/6568789924</string>-->
    <string name="adsUnit" translatable="false">ca-app-pub-1054022283683770/3737929609</string>
    <string name="testAds">ca-app-pub-3940256099942544/6300978111</string>
    <string name="add_money">add money</string>
    <string name="report">REPORT</string>
    <string name="add_descriptions">add descriptions</string>
    <string name="groups_name">groups name</string>
    <string name="create_unique_code">create unique code</string>
    <string name="create">CREATE</string>
</resources>
