<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".allAct.RegisterAct"
        android:background="@drawable/gradcolor"
        android:orientation="vertical"
        android:paddingTop="30dp"
        >
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/register"
            android:textSize="23sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:fontFamily="cursive"
            android:textColor="@color/whiteColor"

            />
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyColors"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
            <EditText
                    android:id="@+id/et_uname"
                    android:hint="@string/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/whiteColor"
                    android:textColor="@color/whiteColor"
                    android:inputType="text"
                    />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:theme="@style/MyColors"
            android:layout_marginEnd="10dp">
            <EditText
                    android:id="@+id/et_email"
                    android:hint="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/whiteColor"
                    android:textColor="@color/whiteColor"
                    android:inputType="textEmailAddress"
                    />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:theme="@style/MyColors"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/whiteColor">
            <EditText
                    android:id="@+id/et_pass"
                    android:hint="@string/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/whiteColor"
                    android:textColor="@color/whiteColor"
                    android:inputType="textPassword"
                    />
    </com.google.android.material.textfield.TextInputLayout>
 <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:theme="@style/MyColors"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/whiteColor">
            <EditText
                    android:id="@+id/et_retryPass"
                    android:hint="@string/password_again"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/whiteColor"
                    android:textColor="@color/whiteColor"
                    android:inputType="textPassword"
                    />
    </com.google.android.material.textfield.TextInputLayout>
<Button
        android:id="@+id/btn_register"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@drawable/gradiens"
        android:textColor="@color/whiteColor"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
</LinearLayout>