<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradcolor"
        android:gravity="center">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/whiteColor"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:padding="15dp"
            android:orientation="vertical"
            >
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="create new group"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:textColor="@color/aoiBlue"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/groups_name"
                    android:id="@+id/et_group"
                    />
        </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                 >
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/create_unique_code"
                        android:id="@+id/et_unCode"
                        android:inputType="textPassword"
                        />
            </com.google.android.material.textfield.TextInputLayout>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/aoiBlue"
                android:text="@string/create"
                android:textColor="@color/whiteColor"
                android:textStyle="bold"
                android:id="@+id/btn_createGroup"
                />
        </LinearLayout>

</LinearLayout>