<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".allAct.MainActivity"
        android:background="@drawable/gradcolor"
        android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".allAct.MainActivity"
            android:orientation="vertical">
        <ImageView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_logout"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:text="@string/nominal"
                android:id="@+id/tv_nominal"
                android:textSize="25sp"
                android:textColor="@color/whiteColor"
                />
        <ImageView
            android:id="@+id/imgView1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/aoiBlue"/>
        <LinearLayout
            android:gravity="center"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                    android:id="@+id/foranim1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                <FrameLayout
                    android:id="@+id/fr_cashFlow"
                    android:layout_margin="7dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:background="@drawable/gradiens">
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_money_flow"/>
                </FrameLayout>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/aoiBlueDark"
                        android:layout_marginBottom="5dp"
                        android:text="@string/cash_flow"
                        android:textAlignment="center"
                        />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/foranim2"
                    >
                <FrameLayout
                        android:id="@+id/fr_seeAlldata"
                        android:layout_margin="7dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:background="@drawable/gradiens">
                    <ImageView
                            android:layout_gravity="center"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/ic_accounting"/>
                </FrameLayout>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/aoiBlueDark"
                        android:layout_marginBottom="5dp"
                        android:text="@string/cash_control"
                        android:textAlignment="center"
                        />
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/foranim3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                <FrameLayout
                        android:id="@+id/fr_cashHistory"
                        android:layout_margin="7dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:background="@drawable/gradiens">
                    <ImageView
                            android:layout_gravity="center"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/ic_cash"/>
                </FrameLayout>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/aoiBlueDark"
                        android:layout_marginBottom="5dp"
                        android:text="@string/flow_history"
                        android:textAlignment="center"
                        />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:gravity="center"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <LinearLayout
                    android:id="@+id/foranim4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                <FrameLayout
                        android:id="@+id/fr_inviteQR"
                        android:layout_margin="7dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:background="@drawable/gradiens">
                    <ImageView
                            android:layout_gravity="center"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/ic_qrcodescan"/>
                </FrameLayout>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/aoiBlueDark"
                        android:layout_marginBottom="5dp"
                        android:text="@string/scan_qr"
                        android:textAlignment="center"
                        />
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/foranim5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                <FrameLayout
                        android:id="@+id/fr_add"
                        android:layout_margin="7dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:background="@drawable/gradiens">
                    <ImageView
                            android:layout_gravity="center"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/ic_add"/>
                </FrameLayout>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/aoiBlueDark"
                        android:layout_marginBottom="5dp"
                        android:text="@string/add_friends"
                        android:textAlignment="center"
                        />
            </LinearLayout>
        </LinearLayout>
            <com.google.android.gms.ads.AdView
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    ads:adSize="SMART_BANNER"
                    ads:adUnitId="@string/adsUnit"/>
    </LinearLayout>
</ScrollView>